// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DrawTool should render points available almost max points drawn 1`] = `
<section
  className="draw-tool"
>
  <ToggleDrawing
    drawingMode="bar"
    shapeMarkers={10}
    toggleDrawing={[MockFunction]}
  />
  <PointsAvailable
    drawingMode="bar"
    markersLeft={2}
  />
</section>
`;

exports[`DrawTool should render points available, shape summary and toggle drawing 1`] = `
<section
  className="draw-tool"
>
  <ToggleDrawing
    drawingMode="none"
    shapeMarkers={0}
    toggleDrawing={[MockFunction]}
  />
</section>
`;

exports[`DrawTool should render summary for 2 points 1`] = `
<section
  className="draw-tool"
>
  <ToggleDrawing
    drawingMode="none"
    shapeMarkers={2}
    toggleDrawing={[MockFunction]}
  />
  <ShapeSummary
    onClearDrawing={[MockFunction]}
    shapeDistanceTxt=""
  />
</section>
`;
